# VolumeControllerPlugin

./: CMakeLists.txt  README.md  build.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
